objects/zoom_app__Zoom__c.object
<CustomObject>
    <description>This object saves the API configuration details of Salesforce and Zoom integration. 
It will have only one record per ORG. API details will be used of Zoom Admin account. 
Zoom users of admin account will be different users in Salesforce.</description>
    <fields>
        <fullName>zoom_app__Disable_Invitation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Org level to disable invitation email</inlineHelpText>
        <label>Disable Invitation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Enable_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Passcode For Non-PMI Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Enable_Webinar_Feature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Webinar Feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__External_Zoom_Meetings__c</fullName>
        <label>External Zoom Meetings Schedule Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Get_Zoom_Meeting_Information__c</fullName>
        <label>Zoom Metrics Schedule Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Login_Type__c</fullName>
        <label>Login Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Populate_Details_into_Event_Description__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populate Meeting Details into Event Description</description>
        <inlineHelpText>Populate Meeting Details into Event Description</inlineHelpText>
        <label>Populate Details into Event Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_API_Key__c</fullName>
        <inlineHelpText>Zoom API Key</inlineHelpText>
        <label>Zoom API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_API_Secret__c</fullName>
        <inlineHelpText>Zoom Secret Key</inlineHelpText>
        <label>Zoom API Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Zoom_url__c</fullName>
        <inlineHelpText>Zoom Url e.g. http://zoom.us/j/</inlineHelpText>
        <label>Zoom url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__zoom_service_env__c</fullName>
        <defaultValue>&quot;prod&quot;</defaultValue>
        <label>Zoom Service Env</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Zoom</label>
    <nameField>
        <label>Zoom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>